--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        h1{
+            color: #cc00ff; 
+            margin-top: 60px;
+        }
+        code.title{
+            color:#c7254e;
+        }
+        code.title+span{
+            margin-left:15px;
+        }
+    </style>
 </head>
 
 <body>
